# papergraph-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.ui  Makefile  README.md  __deployment__.py  alembic.ini  context.md  docker-compose.yml  pyproject.toml  search_openalex.py
.github/workflows/: ci.yml  helm.yml  terraform.yml
app/: agent.py  api.py  cli.py  errors.py  logging.py  mcp.py  metrics.py  settings.py  tracing.py  ui.py
app/agents/: __init__.py  constants.py  models.py  protocols.py  research.py  research_graph.py  research_tools.py  utils.py
app/api/: __init__.py  app.py  lifespan.py  models.py  routes.py
app/clients/: openalex.py
app/dashboards/: __init__.py  generate.py  papergraph.py
app/db/: feedback_schema.py  neo4j.py  postgres.py  qdrant.py
app/eval/: services.py
app/eval/llm/: __init__.py  evaluate.py  judge.py  llm_dataset.json  models.py  protocols.py  runner.py  utils.py
app/eval/llm/ground_truth/: evaluate.py  generator.py  models.py  (+2 more)
app/eval/retrieval/: __init__.py  dataset.json  evaluate.py  ids.py  models.py  protocols.py  retrievers.py  utils.py
app/ingestion/: dlthub.py  models.py  openalex.py  protocols.py  run.py  utils.py
app/repositories/: feedback.py  graph.py  vector.py
app/services/: papers.py
infra/helm/papergraph/: Chart.yaml  README.md  values-dev.yaml  values.yaml
infra/monitoring/prometheus/: prometheus.yml
infra/monitoring/tempo/: tempo.yml
infra/scripts/: sync-secret-manager-from-env.sh
infra/terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
migrations/: env.py  script.py.mako
migrations/versions/: 20260717_0001_initial_qdrant_collection.py  20260717_0002_initial_neo4j_schema.py  20260719_0003_user_feedback.py
tests/: test_api.py  test_mcp.py  test_ui.py
tests/agents/: test_research.py
tests/clients/: test_openalex.py
tests/dashboards/: test_papergraph.py
tests/db/: test_postgres.py
tests/eval/: test_llm.py  test_llm_ground_truth.py  test_retrieval.py
tests/ingestion/: test_dlthub.py  test_openalex_ingestion.py  test_run.py
tests/repositories/: test_feedback.py  test_graph.py  test_vector.py
tests/services/: test_papers.py
(+58 files in other folders)
