[project]
name = "papergraph-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.2",
    "asyncpg>=0.31.0",
    "dlt>=1.29.0",
    "fastapi>=0.139.2",
    "httpx>=0.27.0",
    "langchain>=1.3.14",
    "langchain-openai>=1.3.5",
    "neo4j>=5.23.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.65b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "opentelemetry-sdk>=1.27.0",
    "prometheus-client>=0.25.0",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "qdrant-client[fastembed]>=1.10.0",
    "sqlalchemy>=2.0.51",
    "streamlit>=1.59.2",
    "structlog>=26.1.0",
    "tabulate>=0.10.0",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "grafanalib>=0.7.1",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.6.0",
    "testcontainers>=4.8.0",
    "ty>=0.0.1a21",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
pythonpath = ["."]
